[tool.poetry]
name = "qnade"
version = "0.1.0"
description = ""
authors = ["Caleb Sanders, Ignacio Varela"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
pydantic = "^2.9.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.8.0"}
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
